legacy/cluster/mc/server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: mc
  labels:
    app: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      nodeName: luma
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: server
          image: docker.io/itzg/minecraft-server@sha256:8decd4eea622aa12a5194af5781fff431be22dfb5aa04b05dc4b2be54693594a
          resources:
            requests:
              memory: 18Gi
            limits:
              memory: 20Gi
          ports:
            - containerPort: 25565
            - containerPort: 25575
            - containerPort: 8100
          volumeMounts:
            - name: data
              mountPath: /data
            - name: static-backup
              mountPath: /data/backup
            #- name: backup
            #  mountPath: /data/remote-backup
      volumes:
        - name: data
          hostPath:
            path: /static/mc
            type: Directory
        - name: static-backup
          hostPath:
            path: /static/backup
            type: Directory
        #- name: backup
        #  persistentVolumeClaim:
        #    claimName: mc-backup
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: mc
spec:
  type: LoadBalancer
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 25565
---
apiVersion: v1
kind: Service
metadata:
  name: rcon
  namespace: mc
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 25575
---
apiVersion: v1
kind: Service
metadata:
  name: bluemap
  namespace: mc
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8100
