legacy/cluster/mc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mc-intro
  namespace: mc
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - mc.realliance.net
      secretName: rea-tls
  rules:
    - host: mc.realliance.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intro
                port:
                  number: 80
