legacy/cluster/mc/map-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mc
  namespace: mc
  annotations:
    external-dns.alpha.kubernetes.io/target: mc.realliance.net
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - map.mc.realliance.net
      secretName: map-rea-tls
  rules:
    - host: map.mc.realliance.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluemap
                port:
                  number: 8100
